--- a/views/index.hbs
+++ b/views/index.hbs
@@ -11,5 +11,7 @@
     <br>
     <a href="/register">Register</a> --}}
 
-    
+    <h1>
+      Welcome to the Password Manager
+    </h1>
   {{/if}}
