--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,9 +1,14 @@
 body {
-  padding: 50px;
+  padding: 10px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   color: #333;
   background: #fff;
+  /* padding-bottom: 70px; */
+  height: 100%;
+}
 
+html {
+  height: 100%;
 }
 
 a {
@@ -23,7 +28,7 @@ table tr {
 }
 
 table tr:nth-child(2n) {
-  background-color: #f9f9f9;
+  background-color: #e8f3f1;
 }
 
 table tr th {
@@ -33,13 +38,15 @@ table tr th {
 }
 
 
+
 /* nav styling */
 nav {
   /* float: left; */
   width: 100%;
   margin: 0 1em 1em 0;
   
-
+  background-color: #e0f1f1 !important;
+  color: #333;
 }
 
 nav ul {
@@ -74,6 +81,7 @@ nav ul li a.active {
   background-color: #fff;
   border-color: #fff;
 }
+
 
 /* form styling */
 form {
@@ -128,16 +136,26 @@ button.active {
 
 footer {
   clear: both;
-  padding: 1em;
+  /* padding: 1em; */
   color: #999;
   border-top: 1px solid #e5e5e5;
   background-color: #f9f9f9;
   text-align: center;
 }
-  
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px; /* Set the fixed height of the footer here */
+  line-height: 60px; /* Vertically center the text there */
+  background-color: #f5f5f5;
+}
 
 
-
-
-
+.container {
+  width: auto;
+  max-width: 680px;
+  padding: 0 15px;
+}
 
