--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,7 +1,7 @@
 
   <div class="container">
-    <h1>Login Page</h1>
-    <p class="lead">Say something worthwhile here.</p>
+    <h1>Login</h1>
+    <p class="lead">Welcome back, your passwords are a click away.</p>
     <br>
     <form role="form" action="/login" method="post" style="max-width: 300px;">
       <div class="form-group">
