--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,7 +1,7 @@
 
   <div class="container">
-    <h1>Register Page</h1>
-    <p class="lead">Say something worthwhile here.</p>
+    <h1>Register</h1>
+    <p class="lead">Welcome to your new password manager!</p>
     <br>
     <form role="form" action="/register" method="post" style="max-width: 300px;">
 
