--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -45,7 +45,7 @@
 
   <footer class="footer">
       <div class="container">
-        <span class="text-muted">Place sticky footer content here.</span>
+        <span class="text-muted">Aleksandr Zheleznov | 200406805</span>
       </div>
     </footer>
 
