--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -4,12 +4,17 @@
     <title>{{title}}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/stylesheets/style.css">
-    {{!-- bootstrap --}}
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet" media="screen">
-    
     <script src="/javascripts/script.js"></script>
+
+    {{!-- bootstrap --}}
+    <link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
+    {{!-- <link rel="stylesheet" href="/stylesheets/bootstap.css"> --}}
+    <script src="/bootstrap/jquery.min.js"></script>
+    {{!-- <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css"> --}}
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    {{!-- <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet" media="screen"> --}}
+    
+    
     <script src="http://code.jquery.com/jquery.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
     <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/sticky-footer/">
