--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -9,7 +9,7 @@
     {{!-- bootstrap --}}
     <link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
     {{!-- <link rel="stylesheet" href="/stylesheets/bootstap.css"> --}}
-    <script src="/bootstrap/jquery.min.js"></script>
+    {{!-- <script src="/bootstrap/jquery.min.js"></script> --}}
     {{!-- <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css"> --}}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     {{!-- <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet" media="screen"> --}}
