--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -3,6 +3,11 @@
   <head>
     <title>{{title}}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    {{!-- set favicon --}}
+    <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
+    
+
     <link rel="stylesheet" href="/stylesheets/style.css">
     <script src="/javascripts/script.js"></script>
 
