--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -30,7 +30,7 @@
       <nav class="navbar navbar-default">
         <div class="container-fluid">
           <div class="navbar-header">
-            <a class="navbar-brand" href="/">Home</a>
+            <a class="navbar-brand" href="/passwords/home">Password Manager</a>
           </div>
           <ul class="nav navbar-nav">
             <li><a href="/logout">Logout</a></li>
@@ -41,7 +41,7 @@
       <nav class="navbar navbar-default">
         <div class="container-fluid">
           <div class="navbar-header">
-            <a class="navbar-brand" href="/">Home</a>
+            <a class="navbar-brand" href="/">Password Manager</a>
           </div>
           <ul class="nav navbar-nav">
             <li><a href="/login">Login</a></li>
